--- a/Homewrok2/index.html
+++ b/Homewrok2/index.html
@@ -1,1 +1,79 @@
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="/style.css" rel="stylesheet">
+</head>
+<body>
 
+<h1>What do i have in my fridge?</h1>
+
+
+<div class="style"> 
+ <div class="Apple">
+  <img src="./Food_C240-128.png">
+  <div class="Apple1">Apple</div>
+ </div>
+ <div class="Cheese">
+  <img src="./Food_C217-128.png">
+  <div class="Cheese1">Cheese</div>
+ </div>
+
+ 
+ <div class="Corn">
+   <img src="./Food_C245-128.png">
+   <div class="Corn1">Corn</div>
+
+ </div>
+
+ <div class="Mushroom">
+  <img src="./Food_C239-128.png">
+  <div class="Mushroom1">Mushroom</div>
+
+
+ </div>
+ <div class="Garlic">
+  <img src="./Food_C238-128.png">
+  <div class="Garlic1">Garlic</div>
+
+
+ </div><br>
+ <div class="Beef">
+  <img src="./Food_C225-128.png">
+  <div class="Beef1">Beef</div>
+ </div>
+
+ <div class="Fish">
+  <img src="./Food_C205-128.png">
+  <div class="Fish1">Fish</div>
+ </div>
+ <div class="Eggs">
+  <img src="./Food_C203-128.png">
+  <div class="Eggs1">Eggs</div>
+ </div>
+
+ <div class="Coriander">
+  <img src="./Food_C235-128.png">
+  <div class="Coriander1">Coriander</div>
+ </div>
+
+ <div class="Pepper">
+  <img src="./Food_C247-128.png">
+  <div class="Pepper1">Pepper</div>
+ </div>
+</div>
+<hr>
+<div class="text">
+  ...that's all...
+</div>
+
+
+
+
+
+
+
+</body>
+</html>
