--- a/homework2/index.html
+++ b/homework2/index.html
@@ -1,1 +1,39 @@
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="/style.css" rel="stylesheet">
+</head>
+<body>
+<div class="edit">
+    <img src="edit.png" width="100" height="100"/>
+    Edit
 
+ </div>
+<div class="favorites">
+  <img src="./favorites.png" width="100" height="100"/>
+  Edit
+
+</div>
+<div class="history">
+  <img src="history.png" width="100" height="100"/>
+  History
+
+</div>
+<div class="security">
+  <img src="./security.png" width="100" height="100"/>
+  Security
+
+</div>
+<div class="settings">
+  <img src="./settings.png" width="100" height="100"/>
+  Settings
+
+</div>
+
+
+
+</body>
+</html>
